# DiagramTool

./: .gitignore  build.sh  class.tex  install.sh  makefile  note.md  pack.py  pyproject.toml  requirements.txt  test.tex
.github/workflows/: OnRelease.yml
src/: __init__.py  __main__.py  customTypes.py  latex.py  main.py  structToTeX.py  utils.py
src/python/: python.py
src/svg/: __init__.py  __main__.py  customTypes.py  main.py  svg.py  test.py  utils.py
