[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DiagramTool"
version = "{version}"
authors = [
  { name="Antoine Buirey", email="antoine.buirey@gmail.com" }
]
description = "A tool to create diagrams from code"
readme = "Readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "feanor==1.0.8",
    "feanorTempDir==1.0.0",
    "gamuLogger>=2.0.6",
    "lxml>=4.6.3",
]

[project.urls]
homepage = "https://github.com/T0ine34/DiagramTool"
issues = "https://github.com/T0ine34/DiagramTool/issues"
source = "https://github.com/T0ine34/DiagramTool"

[project.scripts]
DiagramBuilder = "DiagramTool.svg.__main__:main"
